--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -87,7 +87,7 @@
             <Switch
                 android:id="@+id/candlesSwitch"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="0"
                 android:checked="true"
                 android:minHeight="48dp"
@@ -97,23 +97,24 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10sp"
-            android:layout_marginRight="10sp"
+            android:layout_marginLeft="20sp"
+            android:layout_marginRight="20sp"
             android:orientation="vertical">
 
             <Button
                 android:id="@+id/blowOutButton"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/blow_out"
                 android:textSize="14sp" />
 
             <Button
                 android:id="@+id/goodbyeButton"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:onClick="goodbye"
-                android:text="@string/goodbye" />
+                android:text="@string/goodbye"
+                android:textSize="14sp" />
         </LinearLayout>
 
     </LinearLayout>
